# SchoolProjects

./: .gitattributes  .gitignore  HilbertCurve.cpp  Labyrinth.cpp  README.md  mvc.html  stack.cpp  temperatures.cpp  vec.cpp
Bookstore/: app.js  package.json
Bookstore/client/: app.js
Bookstore/client/controllers/: genres.js
Bookstore/client/css/: style.css
Bookstore/client/views/: genres.html
Bookstore/models/: book.js  genre.js
BullsAndCows/: index.html
BullsAndCows/css/: styles.css
BullsAndCows/js/: solution.js
CardsCPP/: cards.cpp
CardsCPP/CardGame/: Belote.cpp  Belote.hh  BeloteGameInfo.h  CMakeLists.txt  Card.cpp  Card.hh  Command.cpp  Command.hh  Commands.h  Dealer.h  Deck.hh  Game.cpp  Game.h  GameError.hh  GameFactory.cpp  GameFactory.h  GameInfo.h  Hand.hh  Helpers.hh  OperatorOverloading.hh  README.md  Santase.cpp  Santase.hh  SantaseGameInfo.h  War.hh  WarGameInfo.h  main.cpp
CardsCPP/CardGame/Commands/: BottomCard.hh  Deal.hh  DrawBottomCard.hh  DrawTopCard.hh  Highest.hh  HighestOfSuit.h  IsBelote.hh  IsFourty.h  IsQuarte.h  IsQuint.h  IsTierce.h  IsTwenty.h  PlayCard.hh  Remaining.hh  Shuffle.hh  Size.hh  Sort.hh  TopCard.hh
JavaLab/Lab6-7/src/: Main.java  Point.java
JavaLab/lab10zad1/src/: Main.java  randomString.java
JavaLab/lab2curr/src/: Main.java
JavaLab/mavenlibrary/: pom.xml
ManyToOne/: .project  pom.xml
PostfixCalculator/: README.md
Sql/: HistoryTables.sql  Library.sql  PlayerStats.sql
TreeMapExercise/: pom.xml
os-exercises/shell/: shell.c
os-exercises/starcraft/: starcraft.c
os-exercises/tail/: tail.c
(+69 files in other folders)
